// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Text /> correctly snapshot testing with bold text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="bold"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`Renders <Text /> correctly snapshot testing with regular text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="regular"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`Renders <Text /> correctly snapshot testing with underlined text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={true}
    _letterSpacing="small"
    _weight="regular"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textDecorationLine": "underline",
        },
      ]
    }
    testID="ds-text"
  >
    Displaying some text
  </Text>
</View>
`;
